# pikmin

./: .gitignore  CMakeLists.txt  README.MD  configure.py
cmake/: files.cmake
include/: CardUtil.h  DebugLog.h  Graphics.h  Matrix3f.h  Matrix4f.h  Texture.h  sysBootup.h  system.h  types.h
include/P2D/: Font.h  Picture.h
include/jaudio/: audiostruct.h  audiothread.h  dvdthread.h  ipldec.h
include/nlib/: Geometry.h  Math.h
include/zen/: particle.h
src/: sysBootup.cpp
src/jaudio/: aictrl.c  audiothread.c  cmdstack.c  cpubuf.c  dsp_cardunlock.c  dspboot.c  dspbuf.c  dspdriver.c  dspinterface.c  dspproc.c  dsptask.c  dummyrom.c  dvdthread.c  fxinterface.c  heapctrl.c  hvqm_play.c  interface.c  jammain_2.c  osdsp.c  osdsp_task.c  piki_bgm.c  random.c  sample.c  seqsetup.c  streamctrl.c  syncstream.c  verysimple.c
src/plugPikiColin/: animMgr.cpp  cardSelect.cpp  game.cpp  gamePrefs.cpp  gameSetup.cpp  gameflow.cpp  movSample.cpp  ninLogo.cpp  titles.cpp
src/plugPikiKando/: aiActions.cpp  aiAttack.cpp  aiBoMake.cpp  aiBore.cpp  aiBou.cpp  aiBreakWall.cpp  aiBridge.cpp  collInfo.cpp  courseDebug.cpp  creature.cpp  creatureCollPart.cpp  gameCoreSection.cpp  genPellet.cpp  itemMgr.cpp  itemObject.cpp  keyConfig.cpp  kio.cpp  kmath.cpp  kontroller.cpp  kusaItem.cpp  memStat.cpp  mizuItem.cpp  naviMgr.cpp  naviState.cpp  paniItemAnimator.cpp  paniPlantAnimator.cpp  panipikianimator.cpp  pikiInf.cpp  plantMgr.cpp  radarInfo.cpp  ropeItem.cpp  saiEvents.cpp  seConstants.cpp
src/plugPikiNakata/: genteki.cpp  nlibfunction.cpp  nlibsystem.cpp  panitekianimator.cpp  (+12 more)
(+26 files in other folders)
